Fix overflow for animated elements

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -524,6 +524,8 @@ img {
 
 // Page
 .page {
+  overflow-y: hidden;
+
   &__title {
     text-align: center;
     margin-bottom: var(--margin);
